Added addition spec

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,10 +11,13 @@
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
-  <!-- include source files here... -->
+  <!-- include source files here...-->
 
+  <script src="js/calculator.js"></script>
 
   <!-- include spec files here... -->
+  <script src="spec/addition_spec.js"></script>
+
 
 </head>
 
