--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,7 +17,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/addition_spec.js"></script>
-
+  <script src="spec/subtraction_spec.js"></script>
 
 </head>
 
