Division throws errors when no parameters are set

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,6 +18,7 @@
   <!-- include spec files here... -->
   <script src="spec/addition_spec.js"></script>
   <script src="spec/subtraction_spec.js"></script>
+  <script src="spec/division_spec.js"></script>
 
 </head>
 
