Multiplication throws error if no parameter set

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,6 +19,7 @@
   <script src="spec/addition_spec.js"></script>
   <script src="spec/subtraction_spec.js"></script>
   <script src="spec/division_spec.js"></script>
+  <script src="spec/multiplication_spec.js"></script>
 
 </head>
 
