Function buttons click

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</div>
 	</div>
 
-
+	<script rel="script" src="js/jquery-1.11.3.min.js"></script>
 	<script rel="script" src="js/script.js"></script>
 </body>
 </html>
