--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here...-->
-
+  <script src="js/big.min.js"></script>
   <script src="js/calculator.js"></script>
 
   <!-- include spec files here... -->
