Implemented big.js on script.js

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	</div>
 
 	<script rel="script" src="js/jquery-1.11.3.min.js"></script>
+	<script rel="script" src="js/big.min.js"></script>
+
 	<script rel="script" src="js/script.js"></script>
 </body>
 </html>
