--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 	<script rel="script" src="js/jquery-1.11.3.min.js"></script>
 	<script rel="script" src="js/big.min.js"></script>
-
+	<script rel="script" src="js/calculator.js"></script>
 	<script rel="script" src="js/script.js"></script>
 </body>
 </html>
